deployment/manifests/ssh/ssh-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssh
  labels:
    app: home-assistant
    component: ssh
  namespace: home-automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
      component: ssh
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: home-assistant
        component: ssh
      namespace: home-automation
    spec:
      hostname: config
      containers:
        - name: ssh
          image: "linuxserver/openssh-server:latest"
          imagePullPolicy: Always
          ports:
            - name: ssh
              containerPort: 2222
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: ssh
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: ssh
            initialDelaySeconds: 15
            periodSeconds: 30
          volumeMounts:
            - mountPath: /config/hass
              name: config
            - mountPath: /home/.ssh
              readOnly: true
              name: public-keys
          resources:
            requests:
              memory: "32Mi"
              cpu: 100m
            limits:
              memory: "32Mi"
              cpu: 200m
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-pvc
        - name: public-keys
          secret:
            secretName: ssh-public-key
---
apiVersion: v1
kind: Service
metadata:
  name: ssh
  labels:
    app: home-assistant
    component: ssh
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - name: ssh
      port: 2222
      protocol: TCP
      targetPort: 2222
  selector:
    app: home-assistant
    component: ssh
